[metadata]
name = bwfriendly
version = 0.0.2
author = Chebanov <k1t4> Nikita
author_email = kit4nikit4@gmail.com
description = A wrapper for Bitwarden-CLI that is more user-friendly
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/k1t4/bwf
project_urls =
    Bug Tracker = https://github.com/k1t4/bwf/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    bwf = bwf.cli:main